Upgraded JDK params and versions on pom